--- a/index.html
+++ b/index.html
@@ -320,11 +320,14 @@
     <div class="container py-5">
         <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.1s">
             <div class="sub-style">
-                <h4 class="sub-title px-3 mb-0">Meet our team</h4>
+                <h4 class="sub-title px-3 mb-0">Meet Our Team</h4>
             </div>
-            <h1 class="display-3 mb-4">Physiotherapy Services from Professional Therapist</h1>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam necessitatibus saepe in ab? Repellat!</p>
+            <h1 class="display-3 mb-4">Transforming Healthcare with Excellence in Non-Clinical Roles</h1>
+            <p class="mb-0">
+                At The Deming’s House, our expert team is dedicated to training and educating professionals in non-clinical healthcare roles. Guided by global standards and over a decade of industry expertise, we ensure our participants excel in patient safety, operational excellence, and medical tourism. Together, we aim to revolutionize the non-clinical healthcare landscape, one professional at a time.
+            </p>
         </div>
+        
         <div class="row g-4 justify-content-center">
             <div class="col-md-4 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="team-item rounded">
