--- a/index.html
+++ b/index.html
@@ -140,9 +140,8 @@
     </div>
 </div>
 <!-- About End -->
-
- <!-- Services Start -->
- <div class="container-fluid service py-5">
+<!-- Services Start -->
+<div class="container-fluid service py-5">
     <div class="container py-5">
         <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.2s">
             <div class="sub-style">
@@ -154,8 +153,8 @@
         <div class="row g-4 justify-content-center">
             <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item rounded">
-                   <div class="service-img rounded-top">
-                        <img src="img/s1.jpg" class="img-fluid rounded-top w-100" alt="Professional Practice in Non-Clinical Healthcare">
+                   <div class="service-img rounded-top d-flex justify-content-center align-items-center bg-light" style="height: 150px;">
+                        <i class="fa fa-briefcase-medical fa-3x text-primary"></i>
                    </div>
                     <div class="service-content rounded-bottom bg-light p-4">
                         <div class="service-content-inner">
@@ -167,8 +166,8 @@
             </div>
             <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="service-item rounded">
-                   <div class="service-img rounded-top">
-                        <img src="img/s2.jpg" class="img-fluid rounded-top w-100" alt="Enhancing Non-Clinical Healthcare Skills">
+                   <div class="service-img rounded-top d-flex justify-content-center align-items-center bg-light" style="height: 150px;">
+                        <i class="fa fa-tools fa-3x text-primary"></i>
                    </div>
                     <div class="service-content rounded-bottom bg-light p-4">
                         <div class="service-content-inner">
@@ -180,8 +179,8 @@
             </div>
             <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="service-item rounded">
-                   <div class="service-img rounded-top">
-                        <img src="img/s3.jpg" class="img-fluid rounded-top w-100" alt="Soft Skills Training for Nurses">
+                   <div class="service-img rounded-top d-flex justify-content-center align-items-center bg-light" style="height: 150px;">
+                        <i class="fa fa-comments fa-3x text-primary"></i>
                    </div>
                     <div class="service-content rounded-bottom bg-light p-4">
                         <div class="service-content-inner">
@@ -193,8 +192,8 @@
             </div>
             <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
                 <div class="service-item rounded">
-                   <div class="service-img rounded-top">
-                        <img src="img/s4.jpg" class="img-fluid rounded-top w-100" alt="DHA Licensing Support Services">
+                   <div class="service-img rounded-top d-flex justify-content-center align-items-center bg-light" style="height: 150px;">
+                        <i class="fa fa-id-card fa-3x text-primary"></i>
                    </div>
                     <div class="service-content rounded-bottom bg-light p-4">
                         <div class="service-content-inner">
@@ -208,6 +207,7 @@
     </div>
 </div>
 <!-- Services End -->
+
 
 <!-- Feature Start -->
 <div class="container-fluid feature py-5" id="whyus">
