--- a/index.html
+++ b/index.html
@@ -392,25 +392,26 @@
 <!-- Course Details End -->
 
 
-      <!-- Founder Section Start -->
+    <!-- Founder Section Start -->
 <div class="container-fluid py-5" style="background-color: #e6f4f1;">
     <div class="container py-5">
         <div class="row align-items-center">
-            <!-- Founder Name Section -->
-            <div class="col-lg-5">
-                <h2 class="mb-2" style="font-size: 36px; font-weight: 700;">Nusrat Mobin</h2>
-                <p class="text-muted" style="font-size: 20px; font-weight: 500;">Founder</p>
-            </div>
-            <!-- Text Section -->
-            <div class="col-lg-7">
-                <p class="mb-0" style="font-size: 18px; line-height: 1.8;">
+            <!-- Text and Founder Name Section -->
+            <div class="col-lg-12">
+                <p class="mb-3" style="font-size: 18px; line-height: 1.8; text-align: justify;">
                     “In today’s healthcare landscape, patient care goes beyond doctors and nurses, starting the moment patients enter a facility. Every touchpoint is vital to enhancing their experience and promoting long-term health and satisfaction. At The Deming’s House, we prepare our alumni for non-clinical roles, equipping them with the skills and empathy to transform patient care through excellence and compassion.”
                 </p>
+                <!-- Founder Name Section -->
+                <div style="text-align: right; margin-top: -10px;">
+                    <h4 class="mb-1" style="font-size: 20px; font-weight: 600; margin-bottom: 2px;">Nusrat Mobin</h4>
+                    <p class="text-muted mb-0" style="font-size: 16px; font-weight: 500;">Founder</p>
+                </div>
             </div>
         </div>
     </div>
 </div>
 <!-- Founder Section End -->
+
 
         <!-- FAQ Start -->
         <div class="container-fluid faq py-5 wow zoomInDown" data-wow-delay="0.1s" id="faq">
